k8s/deployment-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pos-dom-pg
  namespace: pos-sale-dom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pos-dom-pg
  template:
    metadata:
      labels:
        app: pos-dom-pg
    spec:
      containers:
        - name: pos-dom-pg
          image: postgres:17-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: pgdata
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata-pvc
      restartPolicy: Always
