k8s/service-odoo.yaml
apiVersion: v1
kind: Service
metadata:
  name: erp-prod
  namespace: erp-kynsoft
spec:
  selector:
    app: odoo-prod
  ports:
    - port: 8069
      protocol: TCP
      targetPort: 8069
  type: ClusterIP
